# twirs

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
benches/: benchmark.rs
licenses/: LICENSE_NSHARE  about.toml  license.html
src/: geometry.rs  lib.rs  matching.rs  ndarray_utils.rs  quads.rs  triangles.rs  wcs.rs
