[package]
name = "twirs"
version = "1.0.0"
authors = ["Christopher Hecker"]
description = "Rust port of the Python astrometric plate solving package twirl"
license = "MIT"
repository = "https://github.com/ChHecker/twirs"
categories = ["science"]
keywords = ["astrometry"]
edition = "2021"

[features]
default = ["parallel"]
parallel = ["rayon", "ndarray/rayon"]

[dependencies]
itertools = "0.12.0"
kiddo = "2.1.1"
log = "0.4.20"
nalgebra = "0.32.3"
ndarray = "0.15.6"
num-traits = "0.2.17"
rayon = { version = "1.7.0", optional = true }

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"
ndarray = { version = "0.15.6", features = ["approx-0_5", "rayon"] }
ndarray-rand = "0.14.0"
numpy = { version = "0.22.1", features = ["nalgebra"] }
pyo3 = { version = "0.22.6", features = ["auto-initialize"] }
rand = "0.8.5"
simplelog = "0.12.1"

[[bench]]
name = "benchmark"
harness = false
